--- a/notebooks_test/test_transformers.ipynb
+++ b/notebooks_test/test_transformers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,19 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-07-28 19:27:05.896547: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-07-28 19:27:05.910818: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-09-08 18:58:33.606253: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-09-08 18:58:33.792810: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1753723625.926553   87171 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1753723625.932024   87171 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-07-28 19:27:05.951083: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1757350713.885182  156612 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1757350713.904358  156612 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-09-08 18:58:34.088859: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -151,7 +151,7 @@
     "\n",
     "# Instanciamos el modelo Transformer\n",
     "kwargs ={\n",
-    "    \"algorithm_\": \"Transformer\",\n",
+    "    \"algorithm_\": \"transformer\",\n",
     "    \"label_parser\": None,\n",
     "    \"size_enc_in\":input_dim,\n",
     "    \"size_dec_in\": input_dim,\n",
@@ -303,7 +303,7 @@
     "\n",
     "# Instanciamos el modelo Transformer\n",
     "kwargs = {\n",
-    "    \"algorithm_\": \"Informer\",\n",
+    "    \"algorithm_\": \"informer\",\n",
     "    \"label_parser\": None,\n",
     "    \"enc_in\": input_dim,             # Number of input variables for the encoder\n",
     "    \"dec_in\": input_dim,             # Number of input variables for the decoder\n",
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
      "output_type": "stream",
      "text": [
       "Train Params: {'label_parser': None, 'train_epochs': 5, 'batch_size': 16, 'lr': 0.001} \n",
-      "Model Params: {'algorithm_': 'Autoformer', 'seq_len': 24, 'label_len': 24, 'pred_len': 24, 'enc_in': 5, 'dec_in': 5, 'c_out': 5, 'd_model': 64, 'n_heads': 8, 'e_layers': 2, 'd_layers': 1, 'd_ff': 128, 'moving_avg': 25, 'factor': 5, 'dropout': 0.1, 'activation': 'gelu', 'output_attention': False}\n"
+      "Model Params: {'algorithm_': 'autoformer', 'seq_len': 24, 'label_len': 24, 'pred_len': 24, 'enc_in': 5, 'dec_in': 5, 'c_out': 5, 'd_model': 64, 'n_heads': 8, 'e_layers': 2, 'd_layers': 1, 'd_ff': 128, 'moving_avg': 25, 'factor': 5, 'dropout': 0.1, 'activation': 'gelu', 'output_attention': False}\n"
      ]
     }
    ],
@@ -495,7 +495,7 @@
     "train_epochs = 5\n",
     "\n",
     "kwargs = {\n",
-    "    \"algorithm_\": \"Autoformer\",\n",
+    "    \"algorithm_\": \"autoformer\",\n",
     "    \"label_parser\": None,\n",
     "    \"seq_len\": seq_len,\n",
     "    \"label_len\": label_len,\n",
