tsfedl and test_tsfedl modified and timeseriesdata

--- a/notebooks_test/test_load_preprocess_datasets.ipynb
+++ b/notebooks_test/test_load_preprocess_datasets.ipynb
@@ -7,14 +7,28 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(\".../S-ADL\")"
+    "sys.path.append(\"/data/Beatriz/Doctorado GR/ADL_platform//S-ADL\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-09-22 21:36:08.852115: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-09-22 21:36:09.029028: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "E0000 00:00:1758569769.092457   43784 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1758569769.111868   43784 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-09-22 21:36:09.273335: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "from SADL.static_data.static_datasets_uci import global_load"
    ]
@@ -836,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1769,6 +1783,254 @@
    "source": [
     "df_time_series = load_time_series('gas_sensor_temperature_modulation')\n",
     "df_time_series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metadata: {'uci_id': 849, 'name': 'Power Consumption of Tetouan City', 'repository_url': 'https://archive.ics.uci.edu/dataset/849/power+consumption+of+tetouan+city', 'data_url': 'https://archive.ics.uci.edu/static/public/849/data.csv', 'abstract': 'This dataset is related to power consumption of three different distribution networks of Tetouan city which is located in north Morocco.', 'area': 'Social Science', 'tasks': ['Regression'], 'characteristics': ['Multivariate', 'Time-Series'], 'num_instances': 52417, 'num_features': 6, 'feature_types': ['Real', 'Integer'], 'demographics': [], 'target_col': ['Zone 1 Power Consumption', 'Zone 2  Power Consumption', 'Zone 3  Power Consumption'], 'index_col': None, 'has_missing_values': 'no', 'missing_values_symbol': None, 'year_of_dataset_creation': 2018, 'last_updated': 'Fri Mar 08 2024', 'dataset_doi': '10.24432/C5B034', 'creators': ['Abdulwahed Salam', 'Abdelaaziz El Hibaoui'], 'intro_paper': {'ID': 260, 'type': 'NATIVE', 'title': 'Comparison of Machine Learning Algorithms for the Power Consumption Prediction : - Case Study of Tetouan city –', 'authors': 'A. Salam, A. E. Hibaoui', 'venue': 'International Renewable and Sustainable Energy Conference', 'year': 2018, 'journal': None, 'DOI': None, 'URL': 'https://www.semanticscholar.org/paper/177512e766fe5d8624a1b3e93abd11082ac37b3f', 'sha': None, 'corpus': None, 'arxiv': None, 'mag': None, 'acl': None, 'pmid': None, 'pmcid': None}, 'additional_info': {'summary': None, 'purpose': None, 'funded_by': None, 'instances_represent': None, 'recommended_data_splits': None, 'sensitive_data': None, 'preprocessing_description': None, 'variable_info': None, 'citation': 'Salam, A., & El Hibaoui, A. (2018, December). Comparison of Machine Learning Algorithms for the Power Consumption Prediction:-Case Study of Tetouan city“. In 2018 6th International Renewable and Sustainable Energy Conference (IRSEC) (pp. 1-5). IEEE.'}}\n",
+      "Variable information:                         name     role        type demographic  \\\n",
+      "0                   DateTime  Feature        Date        None   \n",
+      "1                Temperature  Feature  Continuous        None   \n",
+      "2                   Humidity  Feature  Continuous        None   \n",
+      "3                 Wind Speed  Feature  Continuous        None   \n",
+      "4      general diffuse flows  Feature  Continuous        None   \n",
+      "5              diffuse flows  Feature  Continuous        None   \n",
+      "6   Zone 1 Power Consumption   Target  Continuous        None   \n",
+      "7  Zone 2  Power Consumption   Target  Continuous        None   \n",
+      "8  Zone 3  Power Consumption   Target  Continuous        None   \n",
+      "\n",
+      "                                   description units missing_values  \n",
+      "0                             Each ten minutes  None             no  \n",
+      "1          Weather Temperature of Tetouan city  None             no  \n",
+      "2             Weather Humidity of Tetouan city  None             no  \n",
+      "3                   Wind speed of Tetouan city  None             no  \n",
+      "4                        general diffuse flows  None             no  \n",
+      "5                                diffuse flows  None             no  \n",
+      "6  power consumption of zone 1 of Tetouan city  None             no  \n",
+      "7  power consumption of zone 2 of Tetouan city  None             no  \n",
+      "8  power consumption of zone 3 of Tetouan city  None             no  \n"
+     ]
+    }
+   ],
+   "source": [
+    "X,y = load_time_series('power_consumption_of_tetouan_city')   #name dataset "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        34055.69620\n",
+       "1        29814.68354\n",
+       "2        29128.10127\n",
+       "3        28228.86076\n",
+       "4        27335.69620\n",
+       "            ...     \n",
+       "52411    31160.45627\n",
+       "52412    30430.41825\n",
+       "52413    29590.87452\n",
+       "52414    28958.17490\n",
+       "52415    28349.80989\n",
+       "Name: Zone 1 Power Consumption, Length: 52416, dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y[\"Zone 1 Power Consumption\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metadata: {'uci_id': 492, 'name': 'Metro Interstate Traffic Volume', 'repository_url': 'https://archive.ics.uci.edu/dataset/492/metro+interstate+traffic+volume', 'data_url': 'https://archive.ics.uci.edu/static/public/492/data.csv', 'abstract': 'Hourly Minneapolis-St Paul, MN traffic volume for westbound I-94. Includes weather and holiday features from 2012-2018.', 'area': 'Other', 'tasks': ['Regression'], 'characteristics': ['Multivariate', 'Sequential', 'Time-Series'], 'num_instances': 48204, 'num_features': 8, 'feature_types': ['Integer', 'Real'], 'demographics': [], 'target_col': ['traffic_volume'], 'index_col': None, 'has_missing_values': 'no', 'missing_values_symbol': None, 'year_of_dataset_creation': 2019, 'last_updated': 'Fri Mar 15 2024', 'dataset_doi': '10.24432/C5X60B', 'creators': ['John Hogue'], 'intro_paper': None, 'additional_info': {'summary': 'Hourly Interstate 94 Westbound traffic volume for MN DoT ATR station 301, roughly midway between Minneapolis and St Paul, MN. Hourly weather features and holidays included for impacts on traffic volume.', 'purpose': None, 'funded_by': None, 'instances_represent': None, 'recommended_data_splits': None, 'sensitive_data': None, 'preprocessing_description': None, 'variable_info': 'holiday                Categorical    US National holidays plus regional holiday, Minnesota State Fair\\r\\ntemp                   Numeric        Average temp in kelvin\\r\\nrain_1h                Numeric        Amount in mm of rain that occurred in the hour\\r\\nsnow_1h                Numeric        Amount in mm of snow that occurred in the hour\\r\\nclouds_all             Numeric        Percentage of cloud cover\\r\\nweather_main           Categorical    Short textual description of the current weather\\r\\nweather_description    Categorical    Longer textual description of the current weather\\r\\ndate_time              DateTime       Hour of the data collected in local CST time\\r\\ntraffic_volume         Numeric        Hourly I-94 ATR 301 reported westbound traffic volume', 'citation': None}}\n",
+      "Variable information:                   name     role         type demographic  \\\n",
+      "0              holiday  Feature  Categorical        None   \n",
+      "1                 temp  Feature   Continuous        None   \n",
+      "2              rain_1h  Feature   Continuous        None   \n",
+      "3              snow_1h  Feature   Continuous        None   \n",
+      "4           clouds_all  Feature      Integer        None   \n",
+      "5         weather_main  Feature  Categorical        None   \n",
+      "6  weather_description  Feature  Categorical        None   \n",
+      "7            date_time  Feature         Date        None   \n",
+      "8       traffic_volume   Target      Integer        None   \n",
+      "\n",
+      "                                         description   units missing_values  \n",
+      "0  US National holidays plus regional holiday, Mi...    None             no  \n",
+      "1                             Average temp in kelvin  Kelvin             no  \n",
+      "2     Amount in mm of rain that occurred in the hour      mm             no  \n",
+      "3     Amount in mm of snow that occurred in the hour      mm             no  \n",
+      "4                          Percentage of cloud cover       %             no  \n",
+      "5   Short textual description of the current weather    None             no  \n",
+      "6  Longer textual description of the current weather    None             no  \n",
+      "7       Hour of the data collected in local CST time    None             no  \n",
+      "8  Hourly I-94 ATR 301 reported westbound traffic...    None             no  \n"
+     ]
+    }
+   ],
+   "source": [
+    "X,y = load_time_series('metro_interstate_traffic_volume')   #name dataset , y None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>temp</th>\n",
+       "      <th>rain_1h</th>\n",
+       "      <th>snow_1h</th>\n",
+       "      <th>clouds_all</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>288.28</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>289.36</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>289.58</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>290.13</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>291.14</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48199</th>\n",
+       "      <td>283.45</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48200</th>\n",
+       "      <td>282.76</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48201</th>\n",
+       "      <td>282.73</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48202</th>\n",
+       "      <td>282.09</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48203</th>\n",
+       "      <td>282.12</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>48204 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         temp  rain_1h  snow_1h  clouds_all\n",
+       "0      288.28      0.0      0.0          40\n",
+       "1      289.36      0.0      0.0          75\n",
+       "2      289.58      0.0      0.0          90\n",
+       "3      290.13      0.0      0.0          90\n",
+       "4      291.14      0.0      0.0          75\n",
+       "...       ...      ...      ...         ...\n",
+       "48199  283.45      0.0      0.0          75\n",
+       "48200  282.76      0.0      0.0          90\n",
+       "48201  282.73      0.0      0.0          90\n",
+       "48202  282.09      0.0      0.0          90\n",
+       "48203  282.12      0.0      0.0          90\n",
+       "\n",
+       "[48204 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.drop([\"date_time\", \"holiday\",\"weather_main\",\"weather_description\"], axis=1)"
    ]
   },
   {
